products-info responsive layout bug fixed v3

--- a/css/custom css/products-info.scss
+++ b/css/custom css/products-info.scss
@@ -866,7 +866,9 @@ body {
 
     #relatedProducts-cont {
         .inner-container {
-            transform: scale(0.9);
+            transform: scale(0.7);
+            margin-top: -3em;
+            margin-bottom: -1em;
         }
     }
 
@@ -892,16 +894,37 @@ body {
 
     #comment-section {
         h3 {
-            margin-left: 1em;
+            margin-left: 1.5em;
         }
     }
 
     #relatedProducts {
-        padding: 1em;
+        padding: 1.5em;
+
+        h3 {
+            font-size: 19px;
+        }
+    }
+
+    #relatedProductsCont{
+        .inner-container{
+            transform: scale(0.7);
+        }
     }
 
     .main-section .main-container .bottom-cont {
-        padding: 1em;
+        padding: 1.5em;
+
+    }
+
+    #description-p {
+        font-size: 13px;
+    }
+
+    #description {
+        h2 {
+            font-size: 19px;
+        }
     }
 
     #info-cont {
